feat(server): StringPropertyLengthBoundsRule.formatWhitelist support

--- a/server/src/main/resources/rules-config.conf
+++ b/server/src/main/resources/rules-config.conf
@@ -245,3 +245,7 @@ ProprietaryHeadersRule {
     "X-RateLimit-Reset"
   ]
 }
+
+StringPropertyLengthBoundsRule {
+  formatWhitelist: [ date, date-time, uuid, ipv4, ipv6 ]
+}
