--- a/server/src/main/resources/rules-config.conf
+++ b/server/src/main/resources/rules-config.conf
@@ -248,4 +248,5 @@ ProprietaryHeadersRule {
 
 StringPropertyLengthBoundsRule {
   formatWhitelist: [ date, date-time, uuid, ipv4, ipv6 ]
+  patternImpliesLimits: true
 }
